<?xml version="1.0" encoding="utf-8"?>

<!-- Row of buttons on bottom of screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/swipe_left"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/evergreen"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/swipe_left_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_swipe_left"
            android:text="@string/swipe_left"
            android:textColor="@color/realwear_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/swipe_right"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/evergreen"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/swipe_right_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:drawableTop="@drawable/ic_swipe_right"
            android:text="@string/swipe_right"
            android:textColor="@color/realwear_gray" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/navbar_horizontal_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_toLeftOf="@id/swipe_right"
        android:layout_toRightOf="@id/swipe_left"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/evergreen">

        <LinearLayout
            android:id="@+id/navbar_scroll_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/evergreen"
            android:paddingBottom="@dimen/navbar_button_margin"
            android:paddingTop="@dimen/navbar_button_margin">

            <LinearLayout
                android:id="@+id/home_nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/home_nav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/ic_home"
                    android:contentDescription="@string/go_home"
                    android:text="@string/home"
                    android:textColor="@color/realwear_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/work_orders_nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/work_orders_nav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/ic_broken"
                    android:contentDescription="@string/work_orders"
                    android:text="@string/work_orders"
                    android:textColor="@color/realwear_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chat_nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/chat_nav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/ic_chat"
                    android:contentDescription="@string/chatbot"
                    android:text="@string/chat"
                    android:textColor="@color/realwear_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dashboard_settings_nav"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dashboard_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:drawableTop="@drawable/ic_dashboard_settings"
                    android:contentDescription="@string/Settings"
                    android:text="@string/Settings"
                    android:textColor="@color/realwear_gray" />
            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>